force-app/main/default/objects/ghgpa_Project_Activity__c/ghgpa_Project_Activity__c.object-meta.xml
<CustomObject>
    <label>Project Activity</label>
    <nameField>
        <label>Project Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>