force-app/main/default/objects/ghgpa_Project_Activity__c/fields/Estimated_Reductions__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Reductions__c</fullName>
    <label>Estimated Reductions</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>