force-app/main/default/objects/ghgpa_Project_Activity__c/fields/GHG_Project__c.field-meta.xml
<CustomField>
    <fullName>GHG_Project__c</fullName>
    <label>GHG Project</label>
    <referenceTo>ghgpa_GHG_Project__c</referenceTo>
    <relationshipLabel>Project Activities</relationshipLabel>
    <relationshipName>Project_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>