force-app/main/default/objects/ghgpa_Project_Activity__c/fields/GHG_SourceSink__c.field-meta.xml
<CustomField>
    <fullName>GHG_SourceSink__c</fullName>
    <inlineHelpText>Source is any process that releases GHG emissions into the atmosphere. A GHG sink is any process that removes and stores GHG emissions from the atmosphere.</inlineHelpText>
    <label>GHG Source/Sink</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combustion - Grid Connected</fullName>
            </value>
            <value>
                <fullName>Combustion - Off Grid/Flaring</fullName>
            </value>
            <value>
                <fullName>Industrial Process</fullName>
            </value>
            <value>
                <fullName>Fugitive</fullName>
            </value>
            <value>
                <fullName>Sink: Waste</fullName>
                <label>Waste</label>
            </value>
            <value>
                <fullName>Biological Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>