force-app/main/default/objects/ghgpa_Project_Activity__c/fields/Measured_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Measured_Reduction__c</fullName>
    <label>Measured Reduction</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>